[package]
name = "hydrogen"
version = "1.0.0"
edition = "2024"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
zstd = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
